[bugfix] white ham lines on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -382,8 +382,6 @@ footer p {
 
     span.ham-line {
         width: 25px;
-        border-top: 2px solid $primary-color;
-        transition: border-color 0.5s ease;
         margin-top: 3px;
         margin-bottom: 3px;
         margin-right: 4px;
